--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 
 python:
-  - '3.5'
   - '3.4'
   - '2.7'
 
@@ -10,6 +9,7 @@ env:
   - DJANGO_VERSION=1.9.5
 
 install:
+  - pip install .
   - pip install -r requirements.txt
   - pip install -q Django==$DJANGO_VERSION
 
